--- a/construccion.html
+++ b/construccion.html
@@ -45,9 +45,11 @@
     </div>
 
     <a href="https://wa.me/+584246098372?text=" target="_blank" class="phone btn-outline"><i class="fa-brands fa-whatsapp"></i>0424-6098372</a>
-    <a href="https://www.instagram.com/comsaludve/" class="more-info">Haz click aqui para mayor información <span><i class="fa-brands fa-square-instagram"></i>
+    <a href="https://www.instagram.com/comsaludve/" class="more-info">
+      <p>Haz click aqui para mayor información</p> <span><i class="fa-brands fa-square-instagram"></i>
         <p>@comsaludve</p>
-      </span></a>
+      </span>
+    </a>
   </main>
 </body>
 
