--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
       </div>
     </div>
 
-    <a href="https://wa.me/+584246098372?text=" target="_blank" class="phone btn-outline"><i class="fa-brands fa-whatsapp"></i>0424-6098372</a>
-    <a href="https://www.instagram.com/comsaludve/" class="more-info">
+    <a href="https://wa.link/xeydja" target="_blank" class="phone btn-outline"><i class="fa-brands fa-whatsapp"></i>0424-6098372</a>
+    <a href="https://www.instagram.com/comsaludve/" target="_blank" class="more-info">
       <p>Haz click aqui para mayor información</p> <span><i class="fa-brands fa-square-instagram"></i>
         <p>@comsaludve</p>
       </span>
     </a>
   </main>
+
+  <footer>
+    <p>2022, Comsalud | Copyright &copy Desarrollado por MDN PUBLICIDAD</p>
+  </footer>
 </body>
 
 </html>
