--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <a href="https://wa.link/xeydja" target="_blank" class="phone btn-outline"><i class="fa-brands fa-whatsapp"></i>0424-6098372</a>
     <a href="https://www.instagram.com/comsaludve/" target="_blank" class="more-info">
-      <p>Haz click aqui para mayor información</p> <span><i class="fa-brands fa-square-instagram"></i>
+      <p>Haz click aquí para mayor información</p> <span><i class="fa-brands fa-square-instagram"></i>
         <p>@comsaludve</p>
       </span>
     </a>
