fixed phone number in footer

--- a/index.html
+++ b/index.html
@@ -1198,11 +1198,11 @@
             <div class="d-flex flex-column justify-content-start">
               <div class="d-flex flex-row justify-content-center justify-content-lg-start align-items-center footer-social ">
                 <img src="./assets/img/whatsapp.png" alt="logo whatsapp">
-                <a target="_blank" href="https://api.whatsapp.com/send?phone=584246098372>0424-6098372</a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=584246098372">0424-6098372</a>
               </div>
               <div class=" d-flex flex-row justify-content-center justify-content-lg-start align-items-center footer-social ">
                 <img src=" ./assets/img/correo.png" alt="logo whatsapp">
-                  <a target="_blank" href="mailto:info@comsalud.com">info@comsalud.com</a>
+                <a target="_blank" href="mailto:info@comsalud.com">info@comsalud.com</a>
               </div>
             </div>
           </div>
