--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Misión</a>
+              <a class="nav-link active" aria-current="page" href="#section-mission">Misión</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#section-objectives">Objetivos</a>
@@ -96,7 +96,7 @@
       <img class="background-arrow" src="./assets/img/flecha-2.png" alt="flecha adorno">
 
       <h2 class="text-center">Planes</h2>
-      <p class="text-secondary text-center mt-2 mt-lg-3  mb-xxl-5">Haz click en uno de nuestros planes para ver mas información</p>
+      <p class="text-secondary text-center mt-2 mt-lg-3  mb-xxl-5 text-click">Haz click en uno de nuestros planes para ver mas información</p>
       <div class="d-flex flex-column flex-xl-row plans-container my-container">
         <div class="plan plan-1 d-flex flex-column align-items-center justify-content-between" id="plan-1">
           <div class="plan-image-container position-relative">
@@ -159,11 +159,11 @@
       <div class="videos-container d-flex flex-column flex-xl-row">
 
         <div class="iframe-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/jU6KUBCy2l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-NRXRRmilXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div class="iframe-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/sCLP3-ogIZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ce6ohgwkZY4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <div class="iframe-container">
