added new video and replaced jpg images for webp

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/styles.css">
-
+  <link rel="canonical" href="http://www.comsaludve.com/">
   <title>Comsaludve</title>
 </head>
 
@@ -113,7 +113,7 @@
         </div>
         <div id="plan-2" class="plan plan-2 d-flex flex-column align-items-center justify-content-between">
           <div class="plan-image-container position-relative">
-            <img src="./assets/img/plan-2.jpg" alt="plan image">
+            <!-- <img src="./assets/img/plan-2.webp" alt="plan image"> -->
             <div class="overlay-secondary"></div>
             <h3>Plan <br> Salud Total</h3>
           </div>
@@ -126,7 +126,7 @@
         </div>
         <div id="plan-3" class="plan plan-3 d-flex flex-column align-items-center justify-content-between">
           <div class="plan-image-container position-relative">
-            <img class="plan-img" src="./assets/img/plan-3.jpg" alt="plan image">
+            <!-- <img class="plan-img" src="./assets/img/plan-3.jpg" alt="plan image"> -->
             <div class="overlay-primary"></div>
             <h3>Plan <br> Salud Ya</h3>
           </div>
@@ -167,7 +167,7 @@
         </div>
 
         <div class="iframe-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/T-XWg3F7zLo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/yIEL00KgTwo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
       </div>
