--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
             <div class="overlay-primary"></div>
             <h3>Plan <br> esencial</h3>
           </div>
+          <p class="text-secondary mb-0">Cobertura</p>
+
           <p class="plan-price">
             $2.000
           </p>
-          <p class="monthly-price">
+          <!-- <p class="monthly-price">
             COSTO<br>MENSUAL $10
-          </p>
+          </p> -->
         </div>
         <div id="plan-2" class="plan plan-2 d-flex flex-column align-items-center justify-content-between">
           <div class="plan-image-container position-relative">
@@ -117,12 +119,14 @@
             <div class="overlay-secondary"></div>
             <h3>Plan <br> Salud Total</h3>
           </div>
+          <p class="text-secondary mb-0">Cobertura</p>
+
           <p class="plan-price">
             $25.000
           </p>
-          <p class="monthly-price">
+          <!-- <p class="monthly-price">
             COSTO<br>MENSUAL $35
-          </p>
+          </p> -->
         </div>
         <div id="plan-3" class="plan plan-3 d-flex flex-column align-items-center justify-content-between">
           <div class="plan-image-container position-relative">
@@ -130,12 +134,14 @@
             <div class="overlay-primary"></div>
             <h3>Plan <br> Salud Ya</h3>
           </div>
+          <p class="text-secondary mb-0">Cobertura</p>
+
           <p class="plan-price">
             $15.000
           </p>
-          <p class="monthly-price">
+          <!-- <p class="monthly-price">
             COSTO<br>MENSUAL $25
-          </p>
+          </p> -->
         </div>
         <div id="plan-4" class="plan plan-4 d-flex flex-column align-items-center justify-content-between">
           <div class="plan-image-container position-relative">
@@ -143,12 +149,13 @@
             <div class="overlay-secondary"></div>
             <h3>Plan <br> Total Senior</h3>
           </div>
+          <p class="text-secondary mb-0">Cobertura</p>
           <p class="plan-price">
             $15.000
           </p>
-          <p class="monthly-price">
+          <!-- <p class="monthly-price">
             COSTO<br>MENSUAL $75
-          </p>
+          </p> -->
         </div>
       </div>
 
