--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Somos una empresa afiliada al Complejo Médico San Lucas, creada para marcar la diferencia en planes de salud. Distinguida y competitiva en la actualidad de cuidados médicos, ajustando su crecimiento a las exigencias mundiales y formando parte del concepto de globalización de la salud.">
+  <meta name="description" content="Comsalud es una empresa afiliada al Complejo Médico San Lucas, ubicados en Maracaibo, Venezuela. Creada para marcar la diferencia en planes de salud. Distinguida y competitiva en la actualidad de cuidados médicos, ajustando su crecimiento a las exigencias mundiales y formando parte del concepto de globalización de la salud.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/701b1fbb0c.js" crossorigin="anonymous"></script>
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="canonical" href="http://www.comsaludve.com/">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Comsaludve</title>
 </head>
 
@@ -56,16 +57,15 @@
   <main class="">
     <section id="section-mission" class="position-relative d-flex flex-column justify-content-center">
       <div class="mission-container">
-        <h1 class="section-title">Misión</h1>
+        <h1 class="section-title">ComSalud</h1>
         <p>Somos una empresa filial a la Clínica San Lucas, creada para marcar la diferencia en planes de salud. Distinguida y competitiva en la actualidad de cuidados médicos, ajustando su crecimiento a las exigencias mundiales y formando parte del concepto de globalización de la salud.</p>
       </div>
       <img src="./assets/img/flecha-2.png" class="mision-flecha" alt="flecha">
 
       <div class="socials d-flex justify-content-between">
 
-        <a class="social" href="#" target="_blank"><img src="./assets/img/Facebook.png" alt="social facebook"></a>
-        <a class="social" href="#" target="_blank"><img src="./assets/img/instagram.png" alt="social instagram"></a>
-        <a class="social" href="#" target="_blank"><img src="./assets/img/Twitter.png" alt="social Twitter.png"></a>
+        <a class="social" href="http://facebook.com/comsaludmcbo" target="_blank"><img src="./assets/img/Facebook.png" alt="social facebook"></a>
+        <a class="social" href="https://www.instagram.com/comsaludve/" target="_blank"><img src="./assets/img/instagram.png" alt="social instagram"></a>
 
 
       </div>
@@ -1223,9 +1223,7 @@
     </div>
 
     <p class="footer-mdn m-0 w-100 text-center pt-2 pb-2">
-      <script>
-        document.write(new Date().getFullYear());
-      </script>, Comsalud | Copyright &copy; Desarrollado por MDN PUBLICIDAD
+      <span id="footer-year"></span>, Comsalud | Copyright &copy; Desarrollado por <a target="_blank" href="https://mdnpublicidad.com/">MDN PUBLICIDAD</a>
     </p>
 
   </footer>
