--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <meta name="description" content="Comsalud es una empresa afiliada al Complejo Médico San Lucas, ubicados en Maracaibo, Venezuela. Creada para marcar la diferencia en planes de salud. Distinguida y competitiva en la actualidad de cuidados médicos, ajustando su crecimiento a las exigencias mundiales y formando parte del concepto de globalización de la salud.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script src="https://kit.fontawesome.com/701b1fbb0c.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css " rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="canonical" href="http://www.comsaludve.com/">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Comsaludve</title>
+  <title>Comsalud</title>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#section-mission">Misión</a>
+              <a class="nav-link active" aria-current="page" href="#section-mission">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#section-objectives">Objetivos</a>
@@ -53,11 +55,22 @@
 
       </div>
     </nav>
+    <div class="position-relative">
+      <!-- <img class="header-background" src="/assets/img/carrusel-4.jpg" alt=""> -->
+
+      <div class="heading-container">
+        <h1 class="section-title">ComSalud</h1>
+        <p class="heading-subtitle"><span>comprometidos </span><span>con </span><span>la </span><span>vida</span></p>
+      </div>
+
+    </div>
   </header>
   <main class="">
+
     <section id="section-mission" class="position-relative d-flex flex-column justify-content-center">
       <div class="mission-container">
-        <h1 class="section-title">ComSalud</h1>
+        <h2 class="text-center">Nosotros</h2>
+
         <p>Somos una empresa filial a la Clínica San Lucas, creada para marcar la diferencia en planes de salud. Distinguida y competitiva en la actualidad de cuidados médicos, ajustando su crecimiento a las exigencias mundiales y formando parte del concepto de globalización de la salud.</p>
       </div>
       <img src="./assets/img/flecha-2.png" class="mision-flecha" alt="flecha">
@@ -1182,9 +1195,7 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="./js/scripts.js"></script>
+
 
   <footer id="section-contact">
     <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between footer-container">
@@ -1227,6 +1238,13 @@
     </p>
 
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+  <script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js "></script>
+  <script src="./js/jquery.waypoints.min.js"></script>
+  <script src="./js/waypoints.js"></script>
+  <script src="./js/scripts.js"></script>
 </body>
 
 </html>
